sfSandBoxCode/force-app/main/default/objects/Toilet_Operational_Status__c/Toilet_Operational_Status__c.object-meta.xml
<CustomObject>
    <description>Store info about the operational status of each toilet</description>
    <label>Toilet Operational Status</label>
    <nameField>
        <label>Toilet Operational Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Toilet Operational Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>