sfSandBoxCode/force-app/main/default/objects/Toilet_Operational_Status__c/fields/Closure_Type__c.field-meta.xml
<CustomField>
    <fullName>Closure_Type__c</fullName>
    <label>Closure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>