sfSandBoxCode/force-app/main/default/objects/Toilet_Operational_Status__c/fields/Current_Record__c.field-meta.xml
<CustomField>
    <fullName>Current_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if this is the current record</description>
    <label>Current Record</label>
    <type>Checkbox</type>
</CustomField>