sfSandBoxCode/force-app/main/default/objects/Toilet_Operational_Status__c/fields/Date_To__c.field-meta.xml
<CustomField>
    <fullName>Date_To__c</fullName>
    <label>Date To</label>
    <type>Date</type>
</CustomField>