sfSandBoxCode/force-app/main/default/objects/Toilet_Operational_Status__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <formula>IF 
( 
(TEXT(Specific_Status__c) = &quot;Open - New&quot; || TEXT(Specific_Status__c) = &quot;Open - Re-launched&quot;), 
Toilet_Status__r.Opportunity__r.Actual_Launch_Date__c + 365, 
IF( 
TEXT(Status__c) = &quot;Open&quot;, Toilet_Status__r.Opportunity__r.Actual_Launch_Date__c, NULL 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>