sfSandBoxCode/force-app/main/default/objects/Toilet_Operational_Status__c/fields/Specific_Status__c.field-meta.xml
<CustomField>
    <fullName>Specific_Status__c</fullName>
    <label>Specific Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Closed - By FLI</fullName>
            </value>
            <value>
                <fullName>Closed - By FLO</fullName>
            </value>
            <value>
                <fullName>Closed - Debranded</fullName>
            </value>
            <value>
                <fullName>Closed - Demolished</fullName>
            </value>
            <value>
                <fullName>Closed - Relocated</fullName>
            </value>
            <value>
                <fullName>Closed - Repossessed</fullName>
            </value>
            <value>
                <fullName>Closed - Resold</fullName>
            </value>
            <value>
                <fullName>Open - Company-Owned</fullName>
            </value>
            <value>
                <fullName>Open - New</fullName>
            </value>
            <value>
                <fullName>Open - Re-installed</fullName>
            </value>
            <value>
                <fullName>Open - Re-launched</fullName>
            </value>
            <value>
                <fullName>Open - Relocated</fullName>
            </value>
            <value>
                <fullName>Open - Resold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>