sfSandBoxCode/force-app/main/default/objects/Toilet_Operational_Status__c/fields/Toilet_Status__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Status__c</fullName>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Toilet Operational Statuses</relationshipLabel>
    <relationshipName>Toilet_Operational_Statuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>