sfSandBoxCode/force-app/main/default/objects/Toilet_Operational_Status__c/validationRules/Status_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Value</fullName>
    <active>false</active>
    <description>Select only statuses for Open/Closed appropriately</description>
    <errorConditionFormula>IF( BEGINS(TEXT( Specific_Status__c ),TEXT(Status__c)),1,0)=0</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Choose an appropriate Specific Status that matches the selected Open/Close Status.</errorMessage>
</ValidationRule>